# variant-generator

./: .gitignore  Cargo.toml  README.md  config.txt
.cargo/: config.toml
src/: config.rs  image_processing.rs  lib.rs  main.rs  transformations.rs  types.rs
tests/: mod.rs
tests/test_images/heic/: IMG-2624x3636.heic
tests/test_images/jpg/: config.txt
tests/transformations/: mod.rs  test_crop.rs  test_resize.rs  test_rotate.rs
