[package]
name = "variant-generator"
version = "0.1.0"
edition = "2021"
authors = ["Richard Lyon <richlyon@fastmail.com>"]
description = "Image variant generator for testing perceptual hashing algorithms"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
image = "0.25.5"
rand = "0.9.0"
libheif-rs = { version = "1.1.0", optional = true }
imageproc = "0.25.0"
rayon = "1.8.1"
indicatif = "0.17.11"

[features]
default = []
heic = ["libheif-rs"]
